--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 
     <div class="game-area">
         <div class="controls-area">
-            <button class="btn btn-big btn-green">
+            <button class="btn btn--big btn--green" data-type="addition">
                 <i class="fas fa-plus"></i>
             </button>
-            <button class="btn btn-big btn-blue">
+            <button class="btn btn--big btn--blue" data-type="subtract">
                 <i class="fas fa-minus"></i>
             </button>
-            <button class="btn btn-big btn-orange">
+            <button class="btn btn--big btn--orange" data-type="multiply">
                 <i class="fas fa-times"></i>
             </button>
-            <button class="btn btn-big btn-red">
+            <button class="btn btn--big btn--red" data-type="division">
                 <i class="fas fa-divide"></i>
             </button>
         </div>
@@ -40,7 +40,7 @@
             <input type="number" id="answer-box">
         </div>
 
-        <button class="btn btn-grey">Submit Answer</button>
+        <button class="btn btn--gray" data-type="submit">Submit Answer</button>
     </div>
 
     <div class="score-area">
